<resources>
    <string name="app_name">Hair Designer</string>
    <string name="welcome">Welcome to Itzik\'s Saloon!</string>
    <string name="enter_your_name">Enter your name:</string>
    <string name="full_name">Full name</string>
    <string name="haircut_man_spinner">Haircut for man - 50 NIS</string>
    <string name="haircut_woman_spinner">Haircut for woman - 100 NIS</string>
    <string name="take_picture">Take a picture from camera</string>
    <string name="upload_gallery">Upload a picture from Gallery</string>
    <string name="next">Next</string>
    <string name="finish_fill_all_details">Please finish all details</string>
    <string name="hello">Hello</string>
    <string name="price">"Cost for the haircut: "</string>
    <string name="coin_type">ILS</string>
    <string name="upload_selfie">Please upload a selfie with your current haircut</string>
    <string name="thank_you_choose">and thank you for choosing us</string>
    <string name="please_pick_a_time">Please pick a time:</string>
    <string name="please_pick_a_date">Please pick a date:</string>
    <string name="time_not_chosen">Time not chosen</string>
    <string name="date_not_chosen">Date not chosen</string>
    <string name="schedule_this_appointment_to_your_calendar">We advise you to schedule this appointment to your calendar</string>
    <string name="appointment_at_saloon">Appointment at Itzik\'s saloon</string>
    <string name="man_haircut_event">Haircut for Man</string>
    <string name="woman_haircut_event">Haircut for Woman</string>
    <string name="we_will_see_you_on">We will see you on</string>
    <string name="at">at</string>
    <string name="don_t_hesitate_to_call_us">Don\'t hesitate to call us</string>
    <string name="add_us_to_your_contact_list">Add us to your contacts list</string>
    <string name="see_our_location">See our location</string>
    <string name="accept_permission">In order to execute the action you should accept permissions</string>
    <string name="alarm_message">Go to Itzik\'s saloon in 30 minutes</string>
    <string name="web_search">Search about us on web</string>
    <string name="search_query">Itzik\'s saloon</string>
    <string name="haircut_japanese_blowout">Japanese blowout - 1000 NIS</string>
    <string name="haircut_hair_coloring">Hair coloring - 150 NIS</string>
    <string name="japanese_blowout_event">Japanese blowout</string>
    <string name="hair_coloring_event">Hair coloring</string>
</resources>
