<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.20"
                android:background="@null"
                android:scaleType="fitXY"
                android:src="@drawable/background" />
        </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeRL"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/welcomeTV"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/emerald"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/inputsRL"
        android:layout_below="@+id/welcomeRL"
        android:paddingTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameTV"
            android:text="@string/enter_your_name"
            android:textSize="18sp"
            android:textColor="@color/dark_red"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nameET"
            android:hint="@string/full_name"
            android:layout_below="@+id/nameTV"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/colorPrimaryDark"
            android:gravity="center"
            />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/typeOfHaircutSpinner"
            android:layout_below="@+id/nameET"
            android:layout_marginTop="20dp"
            android:dropDownSelector="@color/emerald"
            android:background="@color/emerald"
            android:popupBackground="@color/grey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/uploadselfieTV"
            android:layout_below="@id/typeOfHaircutSpinner"
            android:text="@string/upload_selfie"
            android:textSize="18sp"
            android:textColor="@color/dark_red"
            android:layout_marginTop="15dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageRL"
            android:layout_below="@+id/typeOfHaircutSpinner"
            android:layout_marginTop="60dp"
            android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/customerSelfie"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageRL"
            android:layout_marginTop="15dp"
            android:id="@+id/camera_rl">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/opencamera_tv"
                android:text="@string/take_picture"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@color/dark_red"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/opencamera_btn"
                android:src="@drawable/ic_photo_camera_black_24dp"
                android:background="@null"
                android:layout_toEndOf="@+id/opencamera_tv"
                android:layout_marginStart="10dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/camera_rl"
            android:layout_marginTop="15dp"
            android:id="@+id/gallery_rl">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/opengallery_tv"
                android:text="@string/upload_gallery"
                android:layout_centerVertical="true"
                android:textSize="18sp"
                android:textColor="@color/dark_red"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/opengallery_btn"
                android:src="@drawable/ic_photo_black_24dp"
                android:background="@null"
                android:layout_toEndOf="@+id/opengallery_tv"
                android:layout_marginStart="10dp"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextpageRL"
        android:layout_below="@+id/inputsRL"
        android:paddingTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_centerHorizontal="true">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_btn_to_second_page"
        android:text="@string/next"
        android:textAllCaps="false"
        android:background="@drawable/next_btn"
        />
    </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>