<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.20"
            android:background="@null"
            android:scaleType="fitXY"
            android:src="@drawable/background" />
    </RelativeLayout>
        <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hello_and_price_rl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hello_tv"
            android:text="@string/hello"
            android:textColor="@color/dark_red"
            android:textSize="30sp"
            android:gravity="center"
            android:textStyle="italic"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price_tv"
            android:layout_below="@+id/hello_tv"
            android:text="@string/price"
            android:layout_marginTop="25dp"
            android:textColor="@color/dark_red"
            android:textSize="20sp"
            android:gravity="center"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time_and_date_picker_rl"
        android:layout_below="@+id/hello_and_price_rl"
        android:layout_marginTop="20dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_rl">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pickTimeTV"
                android:text="@string/please_pick_a_time"
                android:layout_centerVertical="true"
                android:textSize="17sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/pickTimeTV"
                android:id="@+id/pickTimeBtn"
                android:layout_marginStart="30dp"
                android:textAllCaps="false"
                android:background="@drawable/next_btn"
                android:text="@string/time_not_chosen"
                android:padding="7dp"
                android:textStyle="bold"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/date_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time_rl"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/pickDateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/please_pick_a_date"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/pickDateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@+id/pickDateTV"
                android:background="@drawable/next_btn"
                android:padding="7dp"
                android:text="@string/date_not_chosen"
                android:textAllCaps="false"
                android:textStyle="bold" />
        </RelativeLayout>

    </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time_and_date_picker_rl"
            android:id="@+id/calendarRL"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/addToCalendarTV"
                android:text="@string/schedule_this_appointment_to_your_calendar"
                android:textColor="@color/dark_red"
                android:textStyle="bold"
                android:textSize="17sp"
                android:gravity="center"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date_range_black_24dp"
                android:id="@+id/addToCalendarBtn"
                android:background="@null"
                android:layout_below="@+id/addToCalendarTV"
                android:paddingTop="15dp"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>
<!--            <RelativeLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/alarm_rl"-->
<!--                android:layout_below="@+id/calendarRL"-->
<!--                android:layout_marginTop="30dp">-->
<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:id="@+id/addToAlarmTV"-->
<!--                    android:text="Is your appointment today? Click on the alarm, we remind you 30 minuts before"-->
<!--                    android:textColor="@color/dark_red"-->
<!--                    android:textStyle="bold"-->
<!--                    android:textSize="17sp"-->
<!--                    android:gravity="center"/>-->
<!--                <ImageButton-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:src="@drawable/ic_alarm_add_black_24dp"-->
<!--                    android:id="@+id/addToAlarmBtn"-->
<!--                    android:background="@null"-->
<!--                    android:layout_below="@+id/addToAlarmTV"-->
<!--                    android:paddingTop="15dp"-->
<!--                    android:layout_centerHorizontal="true"-->
<!--                    />-->

<!--            </RelativeLayout>-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextToThirdPageRL"
        android:layout_below="@id/calendarRL"
        android:paddingTop="40dp"
        android:layout_centerHorizontal="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/next_btn_to_third_page"
            android:text="@string/next"
            android:textAllCaps="false"
            android:background="@drawable/next_btn"
            android:layout_marginBottom="10dp"
            />
    </RelativeLayout>
        </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>