<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.20"
                    android:background="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/background" />
            </RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="20dp"
    android:layout_marginEnd="20dp">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summary_rl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/summary_tv"
            android:textColor="@color/dark_red"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"/>
    </RelativeLayout>
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/call_rl"
    android:layout_marginTop="30dp"
    android:layout_below="@+id/summary_rl">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/callus_tv"
        android:text="@string/don_t_hesitate_to_call_us"
        android:layout_centerVertical="true"
        android:textSize="17sp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/callus_tv"
        android:id="@+id/call_us_btn"
        android:background="@drawable/ic_call_black_24dp"
        android:layout_marginStart="30dp"/>
</RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/contact_rl"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/call_rl">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_tv"
            android:text="@string/add_us_to_your_contact_list"
            android:layout_centerVertical="true"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/contact_tv"
            android:id="@+id/add_contact_btn"
            android:background="@drawable/ic_contact_phone_black_24dp"
            android:layout_marginStart="30dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/navigate_rl"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/contact_rl">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/navigate_us_tv"
            android:text="@string/see_our_location"
            android:layout_centerVertical="true"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/navigate_us_tv"
            android:id="@+id/navigate_us_btn"
            android:background="@drawable/ic_place_black_24dp"
            android:layout_marginStart="30dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/navigate_rl"
        android:id="@+id/websearch_rl"
        android:layout_marginTop="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/websearch_tv"
            android:text="@string/web_search"
            android:layout_centerVertical="true"
            android:textSize="17sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/websearch_tv"
            android:id="@+id/websearch_btn"
            android:background="@drawable/ic_search_black_24dp"
            android:layout_marginStart="30dp"/>

    </RelativeLayout>
<!--    <RelativeLayout-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:id="@+id/notesRL"-->
<!--        android:layout_below="@+id/contact_us_rl">-->
<!--        <EditText-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="Enter a note"-->
<!--            android:id="@+id/noteET"/>-->
<!--        <Button-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/note_btn"-->
<!--            android:layout_toEndOf="@+id/noteET"-->
<!--            android:text="insert to my notes"/>-->
<!--    </RelativeLayout>-->
        </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>